// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H H1 1`] = `
<h1
  className="Text__Test__root Text__Test---vol-1-8"
>
  I Am Groot!
</h1>
`;

exports[`H H2 1`] = `
<h2
  className="Text__Test__root Text__Test---vol-1-7"
>
  I Am Groot!
</h2>
`;

exports[`H H3 1`] = `
<h3
  className="Text__Test__root Text__Test---vol-1-6"
>
  I Am Groot!
</h3>
`;

exports[`H H3 volume 1`] = `
<h3
  className="Text__Test__root Text__Test---vol-1-5"
>
  I Am Groot!
</h3>
`;

exports[`H H4 1`] = `
<h4
  className="Text__Test__root Text__Test---vol-1-5"
>
  I Am Groot!
</h4>
`;

exports[`H H5 1`] = `
<h5
  className="Text__Test__root Text__Test---vol-1-4"
>
  I Am Groot!
</h5>
`;

exports[`H H6 1`] = `
<h6
  className="Text__Test__root Text__Test---vol-1-4"
>
  I Am Groot!
</h6>
`;

exports[`P P 1`] = `
<p
  className="Text__Test__root Text__Test---vol-1-3"
>
  I Am Groot!
</p>
`;

exports[`P P volume 1`] = `
<p
  className="Text__Test__root Text__Test---vol-1-5"
>
  I am Groot!
</p>
`;

exports[`Text P truncate 1`] = `
<p
  className="Text__Test__root Text__Test--truncate Text__Test---vol-1-3 Text__Test---lineClamp-1-2"
>
  The cryosphere refers to frozen components of the Earth system. Around 10% of Earth’s land area is covered by glaciers or ice sheets. The ocean and cryosphere support unique habitats, and are interconnected with other components of the climate system through global exchange of water, energy and carbon.
</p>
`;

exports[`Text Text 1`] = `
<h1
  className="Text__Test__root Text__Test---vol-1-3"
>
  I Am Groot!
</h1>
`;

exports[`Text Text volume 1`] = `
<h3
  className="Text__Test__root Text__Test---vol-1-6"
>
  I Am Groot!
</h3>
`;
